cpp/ql/test/library-tests/dataflow/security-taint/tainted_ir.expected
ERROR: asInstruction() cannot be resolved for type DataFlowUtil::Node (/Users/mathias/semmle-code/ql/cpp/ql/lib/semmle/code/cpp/ir/dataflow/internal/DefaultTaintTrackingImpl.qll:253,36-49)
WARNING: Module TaintedWithPath has been deprecated and may be removed in future (tainted_ir.ql:3,35-50)
WARNING: Module TaintedWithPath has been deprecated and may be removed in future (tainted_ir.ql:9,3-18)
